.gitignore päivitys -IK

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ AmpuminenR1/.vs/
 Ampumapäiväkirja/obj/*
 Ampumapäiväkirja/bin/*
 Ampumapäiväkirja/.vs/
+Ampumapäiväkirjakonsoli/obj/*
+Ampumapäiväkirjakonsoli/bin/*
+Ampumapäiväkirjakonsoli/.vs/
