fixed gitignore and bug fix -IK

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 AmpuminenR1/obj/*
 AmpuminenR1/bin/*
 AmpuminenR1/.vs/
-Ampumapäiväkirja/obj/*
-Ampumapäiväkirja/bin/*
+Ampumapäiväkirja/ConsoleApp3/obj/*
+Ampumapäiväkirja/ConsoleApp3/bin/*
 Ampumapäiväkirja/.vs/
-Ampumapäiväkirjakonsoli/obj/*
-Ampumapäiväkirjakonsoli/bin/*
+Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/obj/*
+Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/bin/*
 Ampumapäiväkirjakonsoli/.vs/
